change background blur

--- a/frontEndMain/mainMenu.html
+++ b/frontEndMain/mainMenu.html
@@ -148,7 +148,7 @@
 
           <!-- gallery-->
 
-          <section id="gallery">
+          <section id="gallery" class="w-100 h-100">
             <div class="container" id="gallC">
 
               <div class="headingG"><span>Gallery</span></div>
@@ -202,6 +202,13 @@
           </section> 
 
           <!-- gallery-->
+
+          <!-- contact us-->
+          <section id="contact">
+
+          </section>
+
+          <!-- contact us-->
 
 
 
