--- a/displayItems/Product.html
+++ b/displayItems/Product.html
@@ -8,7 +8,7 @@
     
 
 
-    <link rel="stylesheet" href="productStyles.Css">
+    <link rel="stylesheet" href="productStyles.css">
 
     <link rel="stylesheet" href="displayCard.php">
     <link rel="preconnect" href="https://fonts.googleapis.com">
