Fixed error on gallery view

--- a/frontEndMain/mainMenu.html
+++ b/frontEndMain/mainMenu.html
@@ -80,7 +80,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="card">
-                    <img src="./Images/choclot.jpg" alt="Chocolaté">
+                    <img src="./Images/About.jpg" alt="Chocolaté">
                   </div>
                 </div>
 
@@ -148,8 +148,8 @@
 
           <!-- gallery-->
 
-          <!-- <section id="gallery" class="w-100 h-100">
-            <div class="container" id="gallC">
+          <section id="gallery" class="w-100 h-100">
+            <div class="container p-5" id="gallC">
 
               <div class="headingG"><span>Gallery </span></div>
   
@@ -199,7 +199,7 @@
 
             </div>
 
-          </section> -->
+          </section> 
 
           <!-- gallery-->
 
