--- a/frontEndMain/mainMenu.html
+++ b/frontEndMain/mainMenu.html
@@ -114,7 +114,8 @@
 
           <!-- best sellers-->
 
-          <!-- <section id="best">
+          <section id="best">
+            
             <div class="heading2">Best <span>Sellers</span></div>
             <div class="container">
               <div class="row">
@@ -145,7 +146,7 @@
             </div>
 
 
-          </section> -->
+          </section>
 
           <!-- best sellers-->
 
